# jsonify2ai

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  DEMO_SCRIPT.md  Frontend-Bloat-Surgical-Removal.md  LICENSE  Makefile  README.md  REFRENCE_ONLY.md  STATE.md  body.json  docker-compose.docker.yml.sample  docker-compose.yml  env.md  images.candidates.json  instructions.md  north_star.md  package-lock.json  package.json  project.map.json  pyproject.toml  pytest.ini  repo_scan.py  test_auth.ps1
api/: Dockerfile  README.md  go.mod  go.sum
archive_legacy/: debug_qdrant.py
db/: README.md
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  DEPLOY.md  README.md  agent_rules.md  contracts.md  demo.md  golden_path.md  invariants.md  system_map.md
eval/: qa.example.jsonl
examples/: ask_local.py  control_panel.py  demo_csv.ps1  demo_csv.sh  demo_resume.ps1  demo_resume.sh
jsonify2ai/: cli.py
scripts/: ask_eval.py  backup_snapshot.py  doctor.ps1  ensure_api_token.ps1  ensure_tokens.ps1  ensure_tokens.sh  export_doc.ps1  export_smoke.py  filewatcher.py  full_pipeline_rebuild.py  ingest_diagnose.py  ingest_dropzone.py  qdrant_delete_by_ids.py  qdrant_indexes.py  smoke_all.ps1  smoke_all.sh  smoke_e2e.py  smoke_golden.py  smoke_http.sh  smoke_precommit.py  smoke_text.ps1  smoke_verify.ps1  smoke_verify.sh  snapshot_state.py  start_all.bat  start_all.ps1  start_all.sh  stop_all.ps1  watch_dropzone.py
web/: .dockerignore  Dockerfile  README.md  index.html  package.json  tsconfig.json
worker/: .dockerignore  (+7 more)
(+139 files in other folders)
